# sashiko

./: .gitignore  .yamllint  Cargo.toml  DESIGN_SECURITY_REVIEW_AGENT.md  Dockerfile  GEMINI.md  MAINTAINERS_GUIDE.md  README.md  Settings.toml  TODO.md  flake.nix
benchmarks/: benchmark_smoke.json  setup_smoke.sh
designs/: DESIGN_AI_WORKER_INTERACTION.md  DESIGN_ARCHITECTURE_HIGH_LEVEL.md  DESIGN_CUSTOM_PROMPTS_AND_TOOLS.md  DESIGN_E2E_TEST.md  DESIGN_GEMINI_CAPTURE.md  DESIGN_GEMINI_MOCKING.md  DESIGN_JIT_PROMPT_LOADING.md  DESIGN_LLM_REVIEW_STRATEGY.md  DESIGN_LOOP_PREVENTION.md  DESIGN_LORE_MIRRORING.md  DESIGN_MULTI_PROVIDER_AI.md  DESIGN_MULTI_TURN_REVIEW.md  DESIGN_REVIEW_PROMPTS.md  DESIGN_REVIEW_WORKER.md  DESIGN_SECURITY_REVIEW_WORKER.md  DESIGN_STATISTICS_REWORK.md  DESIGN_STRUCTURED_INLINE_REVIEW.md  always-verify-review-stage.md  email_interface.md  subject-filtering.md
docs/: FORGE_SETUP.md  GEMINI_TRACING.md  GITHUB_SETUP.md  GITLAB_SETUP.md  PROMPTS.md  SETTINGS.md  TOOLS.md
sashiko.dev/: email_policy.toml
scripts/: check-sob.sh  check_server_config.sh  docker-entrypoint.sh  ingest_examples.sh  setup_mock_env.sh  test_github_webhook.sh  test_gitlab_webhook.sh  trigger_github_pr_review.sh  trigger_gitlab_mr_review.sh
src/: api.rs  baseline.rs  db.rs  email_policy.rs  email_router.rs  events.rs  fetcher.rs  forge.rs  gerrit.rs  git_ops.rs  ingestor.rs  lib.rs  main.rs  metrics.rs  patch.rs  reviewer.rs  schema.sql  settings.rs  stats.rs  utils.rs
static/: details.html  index.html  log.html  message.html
tests/: cover_letter_late_merge_test.rs  (+14 more)
(+53 files in other folders)
